Your commit message here

--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
 
   <div id="inputWrapper" class="input-wrapper">
     <div class="input-container">
-      <textarea id="messageInput" placeholder="Ask anything..." rows="1"></textarea>
+      <textarea id="messageInput" placeholder="Ask (almost) anything..." rows="1"></textarea>
       <button onclick="sendMessage()">Send</button>
     </div>
   </div>
